--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -42,6 +42,7 @@
                 android:gravity="center_horizontal"
                 android:keepScreenOn="true"
                 android:paddingBottom="2dp"
+                android:paddingTop="11dp"
                 android:text="Aga Khan University"
                 android:textColor="@android:color/black"
                 android:textSize="@dimen/_18sdp"
@@ -52,6 +53,7 @@
                 android:layout_height="wrap_content"
                 android:elevation="2dp"
                 android:fontFamily="serif"
+                android:paddingTop="8dp"
                 android:gravity="center_horizontal"
                 android:keepScreenOn="true"
                 android:text="Center of excellence in\nWomen and Child Health"
