--- a/app/src/main/res/layout/activity_section_c6.xml
+++ b/app/src/main/res/layout/activity_section_c6.xml
@@ -314,12 +314,11 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5dp"
-                        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz"
+                        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz 0123456789"
                         android:hint="@string/kc605dx"
                         android:inputType="text"
                         android:text='@{kc605d.checked ? kc605dx.getText.toString : ""}'
                         android:visibility='@{kc605d.checked ? View.VISIBLE : View.GONE}' />
-
 
                     <CheckBox
                         android:id="@+id/kc605e"
@@ -461,7 +460,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="1dp"
                     android:layout_weight="1"
-                    android:text="@string/drem" />
+                    android:text="@string/dkndrem" />
 
             </RadioGroup>
 
@@ -685,7 +684,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="1dp"
                         android:layout_weight="1"
-                        android:text="@string/kc609c" />
+                        android:text="@string/kc610c" />
 
                     <CheckBox
                         android:id="@+id/kc610d"
